[tool.poetry]
name = "astro-sample"
version = "0.1.0"
description = ""
authors = ["egendron93 <egendron93@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
astropy = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
