[tool.poetry]
name = "astro-sample"
version = "0.1.0"
description = ""
authors = ["egendron93 <egendron93@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
astropy = "^6.1.0"
pytest-astropy = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
